# candidai

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml
agent/: .dockerignore  .env.example  Dockerfile  candidai_agent.py  edge_tts_plugin.py  events.py  instructions.md  main.py  openrouter_vlm.py  pg_rag.py  pose_processor.py  pyproject.toml  pyrightconfig.json
agent/interview_questions/: behavioral.md  coding.md  technical.md
web/: .dockerignore  .env-example.local  .gitignore  next.config.ts  package.json
web/convex/: auth.ts  authOptions.ts  bodyLanguageSnapshots.ts  cheatingIncidents.ts  codeSubmissions.ts  interviews.ts  reports.ts  schema.ts  scores.ts  transcripts.ts  users.ts
web/convex/_generated/: api.d.ts
web/convex/lib/: authz.ts
web/src/: middleware.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/admin/: page.tsx
web/src/app/dashboard/: page.tsx
web/src/app/sign-in/: page.tsx
web/src/components/auth/: AuthGuard.tsx  SignInForm.tsx
web/src/components/avatar/: AvatarCanvas.tsx  AvatarExpressions.ts  useAvatarEvents.ts
web/src/components/editor/: CodeEditor.tsx  CodeOutput.tsx
web/src/components/interview/: BodyLanguageIndicator.tsx  InterviewControls.tsx  InterviewHeader.tsx  InterviewRoom.tsx  MCQCard.tsx  TranscriptPanel.tsx
web/src/components/providers/: ConvexClientProvider.tsx
web/src/components/report/: RecordingPlayer.tsx  ReportDashboard.tsx  ScoreRadar.tsx  TimelineView.tsx
web/src/hooks/: useCustomEvents.ts
web/src/lib/: constants.ts
web/src/types/: interview.ts
(+6 files in other folders)
