[project]
name = "candidai-agent"
version = "0.1.0"
description = "CandidAI - Intelligent technical interview agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.2.1",
    "vision-agents[deepgram,getstream,openrouter,smart-turn,ultralytics]>=0.3.6",
    "asyncpg>=0.29.0",
    "pgvector>=0.3.6",
    "fastembed>=0.4.0",
    "watchfiles>=0.21.0",
    "edge-tts>=6.1.0",
]
